[package]
name = "srcds-influxdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb = { version = "0.7.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
serde_yaml = "0.8.7"
serde = { version = "1.0", features = ["derive"] }